--- a/report/clinical/main_manuscript.tex
+++ b/report/clinical/main_manuscript.tex
@@ -70,16 +70,20 @@
 \author[4]{Anders Bjartell, PhD}
 \ead{anders.bjartell@med.lu.se}
 
+\author[2,5]{Ewout W. Steyerberg, PhD}
+\ead{e.w.steyerberg@lumc.nl}
+
 \author[1]{Dimitris Rizopoulos, PhD}
 \ead{d.rizopoulos@erasmusmc.nl}
 
-\author[5]{Movember Foundation’s Global Action Plan Prostate Cancer Active Surveillance (GAP3) consortium}
+\author[6]{Movember Foundation’s Global Action Plan Prostate Cancer Active Surveillance (GAP3) consortium}
 
 \address[1]{Department of Biostatistics, Erasmus University Medical Center, Rotterdam, the Netherlands}
 \address[2]{Department of Public Health, Erasmus University Medical Center, Rotterdam, the Netherlands}
 \address[3]{Department of Urology, Erasmus University Medical Center, Rotterdam, the Netherlands}
 \address[4]{Department of Urology, Sk\r{a}ne University Hospital, Malm\"{o}, Sweden}
-\address[5]{The Movember Foundation’s Global Action Plan Prostate Cancer Active Surveillance (GAP3) consortium members presented in Appendix A}
+\address[5]{Department of Biomedical Data Sciences, Leiden University Medical Center, Leiden, the Netherlands}
+\address[6]{The Movember Foundation’s Global Action Plan Prostate Cancer Active Surveillance (GAP3) consortium members presented in Appendix A}
 
 %% or include affiliations in footnotes:
 
@@ -94,19 +98,19 @@ Active Surveillance\sep Biopsies \sep Personalized Medicine\sep Prostate Cancer 
 \linenumbers
 
 \include{mainmatter/introduction}
-%Intro: 546 words
-%Cumsum: 546 words
+%Intro: 496 words
+%Cumsum: 496 words
 \include{mainmatter/study_cohort}
-%Study cohort: 200 words
-%Cumsum: 746 words
+%Study cohort: 172 words
+%Cumsum: 668 words
 \include{mainmatter/stat_analysis}
-%Stat analysis: 783 words
-%Cumsum: 1529
+%Stat analysis: 678 words
+%Cumsum: 1346 words
 \include{mainmatter/result}
 \include{mainmatter/discussion}
 \include{mainmatter/conclusion}
-%Conclusion: 131 words
-%Cumsum: 1660
+%Conclusion: 104 words
+%Cumsum: 1450 words
 
 \section*{Acknowledgments}
 This work was supported by the Movember Foundation. The funder did not play any role in the study design, collection, analysis or interpretation of data, or in the drafting of this paper. The first and last Authors would like to acknowledge support by Nederlandse Organisatie voor Wetenschappelijk Onderzoek (the national research council of the Netherlands) VIDI grant nr. 016.146.301, and Erasmus University Medical Center funding.
