--- a/report/clinical/mainmatter/stat_analysis.tex
+++ b/report/clinical/mainmatter/stat_analysis.tex
@@ -1,14 +1,8 @@
 % !TEX root =  ../main_manuscript.tex 
-\subsection{Statistical Methods}
-For our aim to create risk of reclassification based personalized biopsy schedules, we required a risk prediction model. Available data was each patient's age at the start of AS, PSA measurements over follow-up, the timing of repeat biopsies and corresponding Gleason grades, and the time of reclassification (Figure~\ref{fig:delay_explanation}). Analysis of this data required modeling the correlation between the PSA measurements of the same patient, the correlation between the Gleason grade and the PSA profile, and to account for PSA measurements missing after a patient experienced reclassification. To this end, a commonly used model is the joint model for time-to-event and longitudinal data \citep{tomer2019,coley2017prediction,rizopoulos2012joint}.
+\subsection{Statistical Model}
+To create personalized biopsy schedules based on patient-specific risk of reclassification, we required a risk prediction model. Available data was patient age at inclusion in AS, PSA measurements over follow-up, the timing of repeat biopsies and corresponding Gleason grades, and observed time of reclassification. Analysis of this data required modeling the correlation between the PSA measurements of the same patient, the correlation between the Gleason grade and the PSA profile, and to account for PSA measurements missing after a patient experienced reclassification. To this end, a commonly used model is the joint model for time-to-event and longitudinal data \citep{tomer2019,coley2017prediction,rizopoulos2012joint}.
 
-%\begin{figure}[!htb]
-%\centerline{\includegraphics[width=\columnwidth]{images/jm_blockdiag.pdf}}
-%\caption{\textbf{Diagram of the joint model}: Patient-specific random effects (ellipse in center) are shared between sub-models for all outcomes pertaining to prostate cancer progression. The random effects model the correlation between the outcomes. In the linear mixed effects sub-model for $\log_2\{\mbox{PSA + 1}\}$ transformed PSA outcome (bottom rectangle), random effects are used as covariates. In the relative-risk sub-model (similar to Cox model) for time of Gleason~$\geq$~7 (GS7), random effects are utilized indirectly, by including fitted $\log_2\{\mbox{PSA + 1}\}$ value and velocities as covariates. Age of patient at baseline is included in both sub-models. Parameters of both sub-models are estimated jointly.}
-%\label{fig:jm_blockdiag}
-%\end{figure}
-
-The joint model we utilized consisted of two sub-models. First, a linear mixed model \citep{laird1982random} for the longitudinally measured PSA (log-transformed). Second, a relative-risk model (similar to Cox model) for modeling the risk of reclassification using the observed times of reclassification. In the sub-model for PSA, we modeled PSA profiles non-linearly (Panel~A, Figure~\ref{fig:jmExplanationPlot_113}). From the fitted PSA profiles, we extracted the instantaneous PSA velocity for each patient. This instantaneous PSA velocity varies as the PSA profile varies over time (Panel~B, Figure~\ref{fig:jmExplanationPlot_113}). Thus it is more precise than the currently used PSA velocity/doubling-time \citep{vickers2009psavelocity}. We connected the two sub-models by using the fitted PSA profile and instantaneous PSA velocity as predictors for risk of reclassification in the relative-risk sub-model (Panel~C, Figure~\ref{fig:jmExplanationPlot_113}). Patient age was included as a predictor in both sub-models. The parameters of the two sub-models were estimated jointly using the R package \textbf{JMbayes} \citep{rizopoulosJMbayes}. This package utilizes the Bayesian methodology to estimate model parameters (Appendix~A). 
+Our joint model consisted of two sub-models. First, a linear mixed model \citep{laird1982random} for longitudinally measured PSA (log-transformed). Second, a relative-risk model (similar to Cox model) for obtaining the risk of reclassification. In the model for PSA, we fitted a curve to PSA measurements (Panel~A, Figure~\ref{fig:jmExplanationPlot_113}). From each patient's fitted PSA profile we extracted the instantaneous PSA velocity. This velocity varies over time (Panel~B, Figure~\ref{fig:jmExplanationPlot_113}). Consequently, it is more precise than the currently used definition of PSA velocity \citep{vickers2009psavelocity}. We connected the two sub-models by using the fitted PSA and instantaneous velocity as predictors in the sub-model for risk of reclassification (Panel~C, Figure~\ref{fig:jmExplanationPlot_113}). Patient age was included in both sub-models. The parameters of the two sub-models were estimated jointly (Appendix~A) using the R package \textbf{JMbayes} \citep{rizopoulosJMbayes}. 
 
 \begin{figure}
 \centerline{\includegraphics[width=\columnwidth]{images/jmExplanationPlot_113.eps}}
@@ -16,18 +10,18 @@ The joint model we utilized consisted of two sub-models. First, a linear mixed m
 \label{fig:jmExplanationPlot_113}
 \end{figure}
 
-\subsection{Risk Predictions for Reclassification}
-The key component in personalized schedules is the cumulative-risk of reclassification. For new patients, we predicted this risk over their whole follow-up period. To this end, we inputted their PSA measurements and Gleason grade results into the joint model fitted to the PRIAS dataset (e.g., Panel~C, Figure~\ref{fig:jmExplanationPlot_113}). When new PSA measurements or biopsy results become available over follow-up, the cumulative-risk profile is also updated.
+\subsection{Predicting Risk of Reclassification}
+The key component in personalized schedules is the cumulative-risk of reclassification. Given, a patient's PSA measurements and previous biopsy results, our joint model predicts the cumulative-risk of reclassification at his current as well as future visit times (e.g., Panel~C, Figure~\ref{fig:jmExplanationPlot_113}). The cumulative-risk profile is also updated as more patient data becomes available over follow-up (Appendix B).
 
-We validated our prediction joint model using the PRIAS dataset (internal validation), as well using five largest AS cohorts from the GAP3 database \citep{gap3_2018} (external validation). These were University of Toronto AS (Toronto), Johns Hopkins AS (JHAS), Memorial Sloan Kettering Cancer Center AS (MSKCC), King's College London AS (KCL), and Michigan Urological Surgery Improvement Collaborative AS (MUSIC). We calculated the area under the receiver operating characteristic curve or AUC \cite{rizopoulos2017dynamic} as a measure of discrimination, and root mean squared prediction error or RMSPE \cite{rizopoulos2017dynamic} as a measure of calibration. Since AS studies are longitudinal in nature, we computed AUC and RMSPE in a time-dependent manner, at a gap of every six months (follow-up schedule of PRIAS) until year five (95-percentile of the observed reclassification times in PRIAS) of follow-up.
+We validated our model internally as well as externally. Internal validation was done using PRIAS dataset. External validation was done in largest five AS cohorts from the GAP3 database \citep{gap3_2018}, namely University of Toronto AS (Toronto-AS), Johns Hopkins AS (JH-AS), Memorial Sloan Kettering Cancer Center AS (MSKCC-AS), King's College London AS (KCL-AS), and Michigan Urological Surgery Improvement Collaborative AS (MUSIC-AS). We assessed our model's discrimination via the area under the receiver operating characteristic curve or AUC \cite{rizopoulos2017dynamic}. For calibration we utilized calibration plots for visual assessment, and root mean squared prediction error \cite{rizopoulos2017dynamic} for quantitative assessment. We also recalibrated our model's baseline hazard of reclassification for each of the five external cohorts (Appendix B).
 
-\subsection{Personalized Schedule of Biopsies, and Their Consequences}
-Patients in PRIAS already have a follow-up schedule for testing PSA (Section~\ref{subsec:cohort}). We reused this schedule to create personalized biopsy schedules out of it. Specifically, we scheduled biopsy on a PSA visit if the predicted cumulative-risk of reclassification on that visit was more than 10\% (example threshold). We applied this rule of biopsy iteratively, starting from the current visit of a patient. After scheduling each subsequent biopsy, we updated the cumulative-risk of reclassification. This was done to account for the probability of not observing reclassification on the latest biopsy. We also kept a minimum gap of one year between consecutive biopsies (PRIAS recommendation). Personalized schedule using various risk thresholds are shown for an example patient in Figure~\ref{fig:demo_pat1}.
+\subsection{Personalized Biopsy Schedules}
+We created personalized schedules of biopsies upon a patient's visit for testing PSA (every 6 months in PRIAS). Specifically, if a patient's cumulative-risk of reclassification at his current PSA visit was more than a certain threshold (e.g., 10\%) we scheduled an immediate biopsy. Our model predicted his cumulative-risk of reclassification at his future PSA follow-up visits as well. Thus, by applying the same risk threshold rule at each future follow-up visit, we scheduled future biopsies (Appendix C). We kept a minimum gap of one year between consecutive biopsies (PRIAS recommendation). Example personalized schedules based on different risk thresholds are shown in Figure~\ref{fig:demo_pat1}.
 
-The choice of the risk threshold in the personalized schedule dictates the \textit{consequences} of that schedule. \textit{Consequences} are, the timing and total number of biopsies, and the expected delay in detecting reclassification if that schedule is followed. A larger risk threshold will lead to infrequent biopsies. However, it may also lead to a longer delay in detecting reclassification. To assist patients in choosing an appropriate risk threshold for personalized schedule, and to compare personalized and fixed schedules, we provided an estimate of these \textit{consequences}. These \textit{consequences} were also personalized (Appendix~C). That is, two patients may follow the same schedule of biopsies, but their expected delay in detection of reclassification will be different.
+The choice of the risk threshold in the personalized schedule dictates the \textit{consequences} of following that schedule. \textit{Consequences} are the timing and the total number of biopsies, and the expected delay in detecting reclassification. Larger risk thresholds will schedule infrequent personalized biopsies. However, the consequent delay in detecting reclassification may also be longer. Our model also estimated these \textit{consequences} in a personalized manner given any schedule of biopsies. Thus patients can compare fixed schedules with various risk threshold based personalized schedules before making a choice.
 
 \subsection{Web-Application}
-We implemented our methodology in a web-application \url{https://emcbiostatistics.shinyapps.io/prias_biopsy_recommender/}. This web-application uses the joint model that is fitted to the PRIAS dataset. Consequently, predictions for risk of reclassification can only be made for ten years of follow-up (follow-up period of PRIAS). Patient data can be uploaded in Microsoft Excel format, or entered manually on the web-application. Patients can check the evolution of their cumulative-risk of reclassification over the future follow-up visits. In addition, the web-application allows comparison of the following schedules: personalized schedules based on 5\%, 10\%, and 15\% risk threshold, annual and biennial biopsies, and the PRIAS schedule.
+We implemented our methodology in a web-application \url{https://emcbiostatistics.shinyapps.io/prias_biopsy_recommender/}. It utilizes our joint model fitted to the PRIAS dataset. Currently, the web-application supports PRIAS and the five external cohorts in which we validated our model. Patient data can be entered manually or can be uploaded in Microsoft Excel format. Predictions for risk of reclassification are shown for the first ten years of follow-up only (current study period of PRIAS). The web-application shows the \textit{consequences} of following these schedules: personalized schedules based on 5\%, 10\%, and 15\% risk threshold; annual biopsies; biennial biopsies; and PRIAS schedule.
 
 \begin{figure}[!htb]
 \centerline{\includegraphics[width=\columnwidth]{images/demo_pat1.eps}}
