--- a/report/clinical/mainmatter/study_cohort.tex
+++ b/report/clinical/mainmatter/study_cohort.tex
@@ -3,9 +3,9 @@
 
 \subsection{Study Cohort}
 \label{subsec:cohort}
-Prostate Cancer International Active Surveillance (PRIAS) is an ongoing (December~2006~--~to date) prospective cohort study of men with low- and very-low risk prostate cancer diagnoses \cite{bul2013active}. More than 100 medical centers from 17 countries contributed to PRIAS, using a common study protocol (\url{www.prias-project.org}). Cancer progression was monitored by measuring PSA every three months for the first two years of follow-up and every six months thereafter. Biopsies were scheduled at year one, four, seven, and ten. Additional yearly biopsies were scheduled when PSA doubling time fell between zero and ten years.
+Prostate Cancer International Active Surveillance (PRIAS) is an ongoing (December~2006~--~to date) prospective cohort study of men with low- and very-low risk prostate cancer diagnoses \cite{bul2013active}. More than 100 medical centers from 17 countries contributed to PRIAS, using a common protocol (\url{www.prias-project.org}). PSA was measured every three months for the first two years of follow-up and every six months thereafter. Biopsies were scheduled at year one, four, seven, and ten. Additional yearly biopsies were scheduled when PSA doubling time fell between zero and ten years.
 
-We selected all 7813 patients between December~2006 and April~2019 who had Gleason grade~1 \citep{epsteinGG2014} at the time of inclusion in AS (Table \ref{table:prias_summary}). Our primary event of interest is reclassification (1134 patients), defined as, increase in Gleason grade on repeat biopsy from grade~1 to 2 or higher. Reclassification is a trigger for treatment advice in PRIAS. Although, 2250 patients were also advised treatment on the basis of PSA, the number of biopsy cores with cancer, anxiety, or other reasons. We focused solely on reclassification because of its strong association with cancer-related outcomes. Due to the periodical nature of biopsies, the true time of reclassification was interval censored (Figure~\ref{fig:delay_explanation}).
+We selected all 7813 patients who had Gleason grade~1 \citep{epsteinGG2014} at the time of inclusion in PRIAS (Table \ref{table:prias_summary}). Our primary event of interest is increase in this Gleason grade to grade~2 or higher upon repeat biopsy, called \textit{reclassification} (1134 patients). Reclassification is a trigger for treatment advice in PRIAS. Although, 2250 patients were also advised treatment on the basis of their PSA, or number of biopsy cores with cancer, or anxiety/other reasons. We focused solely on reclassification because of its strong association with cancer-related outcomes.
 
 \begin{table}
 \small\sf\centering
