--- a/report/clinical/supplementary.tex
+++ b/report/clinical/supplementary.tex
@@ -76,16 +76,20 @@
 \author[4]{Anders Bjartell, PhD}
 \ead{anders.bjartell@med.lu.se}
 
+\author[2,5]{Ewout W. Steyerberg, PhD}
+\ead{e.w.steyerberg@lumc.nl}
+
 \author[1]{Dimitris Rizopoulos, PhD}
 \ead{d.rizopoulos@erasmusmc.nl}
 
-\author[5]{Movember Foundation’s Global Action Plan Prostate Cancer Active Surveillance (GAP3) consortium}
+\author[6]{Movember Foundation’s Global Action Plan Prostate Cancer Active Surveillance (GAP3) consortium}
 
 \address[1]{Department of Biostatistics, Erasmus University Medical Center, Rotterdam, the Netherlands}
 \address[2]{Department of Public Health, Erasmus University Medical Center, Rotterdam, the Netherlands}
 \address[3]{Department of Urology, Erasmus University Medical Center, Rotterdam, the Netherlands}
 \address[4]{Department of Urology, Sk\r{a}ne University Hospital, Malm\"{o}, Sweden}
-\address[5]{The Movember Foundation’s Global Action Plan Prostate Cancer Active Surveillance (GAP3) consortium members presented in Appendix A}
+\address[5]{Department of Biomedical Data Sciences, Leiden University Medical Center, Leiden, the Netherlands}
+\address[6]{The Movember Foundation’s Global Action Plan Prostate Cancer Active Surveillance (GAP3) consortium members presented in Appendix A}
 
 %% or include affiliations in footnotes:
 \end{frontmatter}
