--- a/report/clinical/mainmatter/conclusion.tex
+++ b/report/clinical/mainmatter/conclusion.tex
@@ -1,3 +1,3 @@
 % !TEX root =  ../main_manuscript.tex 
 \section{Conclusions}
-We developed a novel methodology for personalized scheduling of biopsies, to detect reclassification (increase in Gleason grade from grade~1 to 2 or higher) in active surveillance prostate cancer patients. Personalized schedules utilize personalized risk of reclassification. Our model predicts this risk using a patient's whole history of PSA, repeat biopsy results and baseline characteristics. Our methodology is time-dynamic because it updates the personalized schedules as more patient data is gathered over follow-up. To assist patients and doctors in making the choice of a suitable biopsy schedule, we provide them estimates of personalized burden (time and total biopsies), and personalized benefit (time delay in detection of reclassification; lesser is beneficial), for both personalized and currently used schedules. Our methodology is available for use in practice at \url{https://emcbiostatistics.shinyapps.io/prias_biopsy_recommender/}.
+We developed a novel methodology and model for personalized scheduling of biopsies in prostate cancer active surveillance (AS) patients. Personalized schedules utilize a patient's risk of reclassification to decide biopsies. They are a promising alternative to fixed and frequent biopsy schedules. We have made them available in a web-application \url{https://emcbiostatistics.shinyapps.io/prias_biopsy_recommender/} for world's six largest AS cohorts. The web-application also assists patients and doctors in choosing a suitable schedule. This is because, it provides them estimates of personalized burden (time and total biopsies), and personalized benefit (time delay in detection of reclassification; lesser is beneficial), for both personalized and currently used schedules.
