--- a/report/clinical/mainmatter/discussion.tex
+++ b/report/clinical/mainmatter/discussion.tex
@@ -1,11 +1,13 @@
 % !TEX root =  ../main_manuscript.tex 
 \section{Discussion}
-We developed personalized schedules of biopsies for active surveillance (AS) prostate cancer patients. These schedules utilize a patient's risk of reclassification (increase in biopsy Gleason grade \citep{epsteinGG2014} from grade~1 to 2 or higher). Reclassification risk calculators are not new \citep{coley2017prediction,ankerst2015precision}. However, our work has three novel features. First, we personalized the risk of reclassification and it to schedule biopsies in a personalized manner. Second, we developed a methodology to assist patients and doctors to compare and choose between personalized and fixed schedules. Specifically, for each schedule we provided the timing and total number of biopsies (burden), and the expected time delay in detecting reclassification (smaller is beneficial). Third, we implemented our methodology in a web-application: \url{https://emcbiostatistics.shinyapps.io/prias_biopsy_recommender/}.
+We developed a novel methodology and model for personalized scheduling of biopsies in prostate cancer active surveillance (AS) patients. Personalized schedules utilize patient-specific risks of reclassification. Reclassification is defined as increase in biopsy Gleason grade \citep{epsteinGG2014} from grade~1 to 2 or higher. Calculators for risk of reclassification are not new \citep{coley2017prediction,ankerst2015precision}. However, our work has four novel features. First, we personalized the risk of reclassification and used it to schedule biopsies in a personalized manner. Second, we developed a methodology that can calculate expected delay in detection of reclassification (less is beneficial) in a personalized manner, given any biopsy schedule. Thus patients and doctors can compare schedules before making a choice. Third, we implemented our methodology in a web-application \url{https://emcbiostatistics.shinyapps.io/prias_biopsy_recommender/}. Fourth, we validated our model in largest five AS cohorts from GAP3 database \citep{gap3_2018}, and hence the web-application can be used by a large number of patients worldwide.
 
-Our risk prediction model was a joint model \citep{rizopoulos2012joint,tsiatis2004joint}, fitted to the world's largest AS dataset, PRIAS. This model consolidated all available patient data, that is, historical PSA measurements and biopsy results, and baseline characteristics, into a single reclassification risk profile. This personalized risk profile and corresponding personalized schedules were updated as more patient data became available over follow-up.
+Currently biopsies are scheduled either in a fixed and frequent manner (e.g., annual biopsies), or PSA value/velocity/doubling-time is used as trigger for biopsies. These approaches have been criticized previously \citep{vickers2009psavelocity,bokhorst2015compliance}. However, earlier approaches do not exploit PSA data fully and correctly. Specifically, they assume that PSA is observed without measurement error, and/or latest PSA is enough to decide biopsies, and/or PSA changes over time in a linearly. In contrast, our joint model builds a patient-specific profile of PSA using all PSA measurements. It also allows PSA and its velocity to change over time non-linearly. Subsequently, it consolidates these finer PSA features, previous biopsy results, and baseline characteristics of a patient, to yield a single personalized estimate for risk of reclassification. Furthermore, the model updates this risk as more patient data is gathered over follow-up. This is a more holistic approach.
 
-We externally validated our model predictions for reclassification in five largest AS cohorts that are part of the GAP3 database \citep{gap3_2018}. We found that the AUC for predictions of GS7 over the follow-up period (Figure~\ref{fig:auc_pe}) was similar in external cohorts and PRIAS (internal validation). The RMSPE however was similar to PRIAS only for Memorial Sloan Kettering Cancer Center and Johns Hopkins cohorts. Given the large size of the latter two cohorts, we expect that our model and the methodology will be useful to a large number of AS patients. Extending our model and methodology in other cohorts only requires fitting the model to their AS dataset.
+A holistic model like ours allows incorporating newer biomarkers and magnetic resonance imaging (MRI) data. Such information is currently sparsely available in PRIAS dataset. However, MRI data can be included as predictor in our model in future. Decisions based on combined information from multiple sources can yield better results than decisions based on MRI or PSA alone. 
 
-The clinical implications of our work are as follows. The median survival time for reclassification is more than ten years in PRIAS, and in some other cohorts (Figure~\ref{fig:npmle_plot}). That is, more than 50\% of AS patients do not require any biopsy during the first ten years of follow-up. We hope that our work will address patient apprehensions regarding adverse outcomes in AS, in a more objective manner. Many AS programs still utilize a rigorous schedule of yearly biopsies \citep{nieboer2018active}. However, with concerns about non-compliance and burden of biopsies \citep{bokhorst2015compliance}, the availability of our web based tool may encourage patients and doctors to consider personalized schedules.
+Our model is not only useful for PRIAS patients, but also for a large number of patients from other cohorts. This is because we have recalibrated and externally validated it in largest five AS cohorts from the GAP3 database \citep{gap3_2018}. These are University of Toronto AS (Toronto-AS), Johns Hopkins AS (JH-AS), Memorial Sloan Kettering Cancer Center AS (MSKCC-AS), King's College London AS (KCL-AS), and Michigan Urological Surgery Improvement Collaborative AS (MUSIC-AS). Extending our model and methodology in smaller cohorts requires only recalibrating our model's baseline risk of reclassification.
 
-Our work has certain limitations. The proposed model is valid only for the first ten years of follow-up in PRIAS, whereas reclassification may occur much later in many patients. In addition, model predictions were less accurate in later follow-up period due to lack of training data. These problems can be mitigated by refitting the model with new follow-up data in future. Although, we focused only on reclassification, it is susceptible to inter-observer variation. Models which account for this variation \citep{coley2017prediction,balasubramanian2003estimation} will be interesting to investigate further. However, the methodology for personalized scheduling, and for comparison of various schedules need not change. There is also a potential for including diagnostic information from novel biomarkers, quality of life measures, and magnetic resonance imaging (MRI). Currently, this data is very sparsely available in the PRIAS dataset. However, in future, our model can be extended by adding the new biomarkers as predictors.
+Our work has important clinical implications. The median survival time for reclassification is more than ten years in PRIAS, and in some other cohorts (Figure~\ref{fig:auc_calib}). That is, more than 50\% of AS patients may not require any biopsy during the first ten years of follow-up. Given the concerns about non-compliance and burden of frequent biopsies \citep{bokhorst2015compliance}, the availability of our web-application may encourage patients and doctors to consider personalized schedules instead. For both personalized and fixed schedules, the web-application also provides an estimate of delay in detection of reclassification. We hope this will address patient apprehensions regarding adverse outcomes in AS, in a more objective manner. 
+
+Our work has certain limitations. The proposed model is valid only for the first ten years of follow-up in PRIAS, whereas reclassification may occur much later in many patients. In addition, our model predictions were less accurate in later follow-up period due to lack of training data. These problems can be mitigated by refitting the model with new follow-up data in future. Although, we focused only on reclassification, an increase in number of positive biopsy cores can also act as a trigger for treatment. We did not consider such additional triggers because they differ between cohorts \citep{nieboer2018active}. Whereas, reclassification is a commonly used criteria. Reclassification is susceptible to inter-observer variation. Models which account for this variation \citep{coley2017prediction,balasubramanian2003estimation} will be interesting to investigate further. However, the methodology for personalized scheduling, and for comparison of various schedules need not change.
